--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-async-handler": "^1.2.0",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
